compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__definition__goto_definition_local_variable.snap
---
source: compiler-core/src/language_server/tests/definition.rs
expression: output
---
---------- Jumping from: 

pub fn main() {
  let x = 1
  x
  ↑
}

---------- Jumped to:

pub fn main() {
  let x = 1
      ↑    
  x
}
