compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__definition__goto_definition_module.snap
---
source: compiler-core/src/language_server/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

import wibble

pub fn main() {
  wibble.wibble()
   ↑             
}

----- Jumped to `src/wibble.gleam`
pub fn wibble() {}
↑
