compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__definition__goto_definition_path_module_function_calls.snap
---
source: compiler-core/src/language_server/tests/definition.rs
expression: output
---
---------- Jumping from: 

import example_module
fn main() {
  example_module.my_fn
                  ↑   
}

---------- Jumped to:
pub fn my_fn() { Nil }
↑▔▔▔▔▔▔▔▔▔▔▔▔▔
