compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__definition__goto_definition_same_module_constants.snap
---
source: compiler-core/src/language_server/tests/definition.rs
expression: output
---
---------- Jumping from: 

const x = 1

pub fn main() {
  x
  ↑
}

---------- Jumped to:

const x = 1
↑▔▔▔▔▔▔    

pub fn main() {
  x
}
