compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__definition__goto_definition_same_module_functions.snap
---
source: compiler-core/src/language_server/tests/definition.rs
expression: output
---
---------- Jumping from: 

fn add_2(x) {
  x + 2
}

pub fn main() {
  add_2(1)
  ↑       
}

---------- Jumped to:

fn add_2(x) {
↑▔▔▔▔▔▔▔▔▔▔  
  x + 2
}

pub fn main() {
  add_2(1)
}
